--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -45,14 +45,14 @@ spec:
         tier: mysql
     spec:
       containers:
-      - image: mysql:5.6
+      - image: mariadb:latest
         name: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: mysql-pass
-              key: password
+              key: db_password.txt
         ports:
         - containerPort: 3306
           name: mysql
