--- a/k8s/wordpress-deployment.yaml
+++ b/k8s/wordpress-deployment.yaml
@@ -45,7 +45,7 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: wordpress:4.8-apache
+      - image: 952573012699.dkr.ecr.us-east-1.amazonaws.com/xilution/1645137c2f53427da00edaa680256215/custom-wordpress:1.0.0
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
@@ -54,7 +54,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mysql-pass
-              key: password
+              key: db_password.txt
         ports:
         - containerPort: 80
           name: wordpress
