--- a/helm/wordpress/templates/wordpress-deployment.yaml
+++ b/helm/wordpress/templates/wordpress-deployment.yaml
@@ -49,7 +49,13 @@ spec:
           name: wordpress
           env:
             - name: WORDPRESS_DB_HOST
-              value: wordpress-mysql
+              value: "{{ .Values.database.host }}"
+            - name: WORDPRESS_DB_PORT
+              value: "{{ .Values.database.port }}"
+            - name: WORDPRESS_DB_NAME
+              value: "{{ .Values.database.name }}"
+            - name: WORDPRESS_DB_USER
+              value: "{{ .Values.database.username }}"
             - name: WORDPRESS_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
