--- a/helm/wordpress/templates/secret.yaml
+++ b/helm/wordpress/templates/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: mysql-pass
 type: Opaque
 data:
-  password: {{ .Values.database.password }}
+  password: "{{ .Values.mysql.password }}"
