chore: updated helm process

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -1,9 +1,9 @@
 include ../config.mk
 
 clean:
-	echo "nothing to do"
+	@echo "nothing to do"
 
-wordpress-release:
+release-wordpress:
 	helm upgrade \
 		--install \
 		--force \
@@ -12,20 +12,25 @@ wordpress-release:
 		--values ../output-build/image.yaml \
 		wordpress ./wordpress
 
-wordpress-delete:
+delete-wordpress:
 	helm delete wordpress
 
 init-prod:
+	aws eks update-kubeconfig --region us-east-1 --name xilution-k8s --profile xilution-prod
 	helm init
 	kubectl create serviceaccount tiller -n kube-system
 	kubectl create clusterrolebinding tiller-cluster-admin --clusterrole=cluster-admin --serviceaccount=kube-system:tiller
 	kubectl patch deploy tiller-deploy -p '{"spec":{"template":{"spec":{"serviceAccount":"tiller"}}}}' -n kube-system
 
 init-test:
+	aws eks update-kubeconfig --region us-east-1 --name xilution-k8s --profile xilution-test
 	helm init
 	kubectl create serviceaccount tiller -n kube-system
 	kubectl create clusterrolebinding tiller-cluster-admin --clusterrole=cluster-admin --serviceaccount=kube-system:tiller
 	kubectl patch deploy tiller-deploy -p '{"spec":{"template":{"spec":{"serviceAccount":"tiller"}}}}' -n kube-system
+
+output:
+	kubectl get services/wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'
 
 verify:
 	helm lint wordpress
