chore: multiple wp instances

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -5,32 +5,27 @@ clean:
 	@echo "nothing to do"
 
 init:
-	@echo "nothing to do"
+	chmod u+x ./scripts/*.sh
 
 release-wordpress:
+	../scripts/update-kubeconfig.sh $(XILUTION_AWS_REGION) $(XILUTION_AWS_PROFILE)
+	../scripts/start-tiller.sh
 	helm upgrade \
 		--install \
 		--force \
-		--values ../output-infrastructure/aurora.yaml \
-		--values ../output-infrastructure/efs.yaml \
-		--values ../output-build/image.yaml \
+  		--namespace wordpress \
+  		--set mysql.name=wordpress-$(XILUTION_PENGUIN_INSTANCE_ID) \
+		--values ../input-build/image.yaml \
 		wordpress-$(XILUTION_PENGUIN_INSTANCE_ID) ./wordpress
+	./scripts/register-load-balancer.sh $(XILUTION_PENGUIN_INSTANCE_ID)
+	../scripts/stop-tiller.sh
 
 delete-wordpress:
+	../scripts/update-kubeconfig.sh $(XILUTION_AWS_REGION) $(XILUTION_AWS_PROFILE)
+	../scripts/start-tiller.sh
 	helm delete wordpress-$(XILUTION_PENGUIN_INSTANCE_ID)
-
-set-up:
-	aws eks update-kubeconfig --region $(XILUTION_AWS_REGION) --name xilution-k8s --profile $(XILUTION_AWS_PROFILE)
-	kubectl create namespace $(TILLER_NAMESPACE)
-	tiller -listen=$(TILLER_HOST) -storage=secret -logtostderr & ; echo $! > tiller.pid
-	sleep 5
-	helm init --client-only
-
-tear-down:
-	kill `cat tiller.pid`
-
-output:
 	./scripts/register-load-balancer.sh $(XILUTION_PENGUIN_INSTANCE_ID)
+	../scripts/stop-tiller.sh
 
 verify:
 	helm lint wordpress
