--- a/helm/wordpress/templates/service.yaml
+++ b/helm/wordpress/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
+  name: "{{ .Release.Name }}"
   labels:
-    app: wordpress
+    app: "{{ .Release.Name }}"
 spec:
   ports:
     - port: 80
   selector:
-    app: wordpress
+    app: "{{ .Release.Name }}"
     tier: frontend
   type: LoadBalancer
