--- a/helm/Makefile
+++ b/helm/Makefile
@@ -7,25 +7,25 @@ clean:
 init:
 	chmod u+x ./scripts/*.sh
 
-release-wordpress:
+apply:
 	../scripts/update-kubeconfig.sh $(XILUTION_AWS_REGION) $(XILUTION_AWS_PROFILE)
 	../scripts/start-tiller.sh
-	helm upgrade \
+	HELM_HOST=:44134 helm upgrade \
 		--install \
 		--force \
   		--namespace wordpress \
   		--set mysql.name=wordpress-$(XILUTION_PENGUIN_INSTANCE_ID) \
 		--values ../input-build/image.yaml \
 		wordpress-$(XILUTION_PENGUIN_INSTANCE_ID) ./wordpress
-	./scripts/register-load-balancer.sh $(XILUTION_PENGUIN_INSTANCE_ID)
 	../scripts/stop-tiller.sh
+	./scripts/register-load-balancer.sh $(XILUTION_PENGUIN_INSTANCE_ID)
 
-delete-wordpress:
+destroy:
 	../scripts/update-kubeconfig.sh $(XILUTION_AWS_REGION) $(XILUTION_AWS_PROFILE)
 	../scripts/start-tiller.sh
-	helm delete wordpress-$(XILUTION_PENGUIN_INSTANCE_ID)
-	./scripts/register-load-balancer.sh $(XILUTION_PENGUIN_INSTANCE_ID)
+	HELM_HOST=:44134 helm delete wordpress-$(XILUTION_PENGUIN_INSTANCE_ID)
 	../scripts/stop-tiller.sh
+	./scripts/deregister-load-balancer.sh $(XILUTION_PENGUIN_INSTANCE_ID)
 
 verify:
 	helm lint wordpress
