--- a/build-specs/infrastructure.yaml
+++ b/build-specs/infrastructure.yaml
@@ -6,19 +6,16 @@ phases:
   pre_build:
     commands:
       - git config --global url."https://$GITHUB_TOKEN:@github.com/".insteadOf "https://github.com/"
-      - export WORDPRESS_DB_PASSWORD=`echo -n 'wordpress' | base64`
       - |
         terraform init \
           -backend-config="key=$XILUTION_ORGANIZATION_ID/terraform.tfstate" \
           -backend-config="bucket=xilution-cms-penguin-infrastructure-terraform-backend-$XILUTION_ENVIRONMENT" \
-          -backend-config="dynamodb_table=xilution-cms-penguin-infrastructure-terraform-backend-lock" \
-          -backend-config="region=$AWS_REGION" \
-          -backend-config="profile=$AWS_PROFILE"
+          -backend-config="dynamodb_table=xilution-cms-penguin-infrastructure-terraform-backend-lock"
   build:
     commands:
       - |
         terraform apply \
-          -var="k8s_cluster_name=$K8S_CLUSTER_NAME" \
           -var="organization_id=$XILUTION_ORGANIZATION_ID" \
-          -var="profile=$AWS_PROFILE" \
+          -var="master_username=$WORDPRESS_DB_USERNAME" \
+          -var="master_password=$WORDPRESS_DB_PASSWORD" \
           -auto-approve
