--- a/build-specs/deploy.yaml
+++ b/build-specs/deploy.yaml
@@ -5,12 +5,11 @@ phases:
       docker: 18
   pre_build:
     commands:
-      - aws eks update-kubeconfig --region $AWS_REGION --name $K8S_CLUSTER_NAME
+      - aws eks update-kubeconfig --name $K8S_CLUSTER_NAME
       - aws s3 cp s3://xilution-helm-data-$XILUTION_ENVIRONMENT/wordpress/wordpress-LATEST.tgz .
       - mkdir -p helm
       - tar -C helm -xzvf wordpress-LATEST.tgz
       - unzip $CODEBUILD_SRC_DIR_build_output/artifacts.zip
-      - cat image.yaml
   build:
     commands:
       - |
@@ -21,6 +20,7 @@ phases:
           --set mysql.name=wordpress-$XILUTION_PENGUIN_INSTANCE_ID \
           --values image.yaml \
           wordpress-$XILUTION_PENGUIN_INSTANCE_ID ./helm/wordpress
-      - |
-        kubectl autoscale deployment wordpress-$XILUTION_PENGUIN_INSTANCE_ID \
-          --cpu-percent=50 --min=1 --max=10 -n wordpress
+# Failed on n+1 execution
+#      - |
+#        kubectl autoscale deployment wordpress-$XILUTION_PENGUIN_INSTANCE_ID \
+#          --cpu-percent=50 --min=1 --max=10 -n wordpress
