--- a/build-specs/deploy.yaml
+++ b/build-specs/deploy.yaml
@@ -27,4 +27,18 @@ phases:
   post_build:
     commands:
       - export LOAD_BALANCER_HOSTNAME=`kubectl get services/wordpress-$XILUTION_PENGUIN_INSTANCE_ID -n wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
-      - aws dynamodb put-item --table-name xilution-cms-penguin-reverse-proxy-load-balancer-reference --item '{"instance-id":{"S":"$XILUTION_PENGUIN_INSTANCE_ID"},"organization-id":{"S":"$XILUTION_ORGANIZATION_ID"},"load-balancer-url":{"S":"$LOAD_BALANCER_HOSTNAME"}}'
+      - |
+        cat <<EOF >./item.json
+        {
+          "instance-id": {
+            "S": "$XILUTION_PENGUIN_INSTANCE_ID"
+          },
+          "organization-id": {
+            "S": "$XILUTION_ORGANIZATION_ID"
+          },
+          "load-balancer-url": {
+            "S": "$LOAD_BALANCER_HOSTNAME"
+          }
+        }
+        EOF
+      - aws dynamodb put-item --table-name xilution-cms-penguin-reverse-proxy-load-balancer-reference --item file://item.json
