--- a/build-specs/build.yaml
+++ b/build-specs/build.yaml
@@ -5,6 +5,10 @@ phases:
       docker: 18
   pre_build:
     commands:
+      - aws sts assume-role --role-arn arn:aws:iam::$CLIENT_AWS_ACCOUNT:role/xilution-developer-role --role-session-name xilution-beta > aws-creds.json
+      - export AWS_ACCESS_KEY_ID=`cat aws-creds.json | jq -r '.Credentials.AccessKeyId'`
+      - export AWS_SECRET_ACCESS_KEY=`cat aws-creds.json | jq -r '.Credentials.SecretAccessKey'`
+      - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
       - export IMAGE_NAME=`yq r config.yaml name`
       - export IMAGE_VERSION=`yq r config.yaml version`
       - aws ecr create-repository --repository-name xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME | true
@@ -14,13 +18,13 @@ phases:
   post_build:
     commands:
       - aws ecr get-login --no-include-email | /bin/bash
-      - docker tag xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME:$IMAGE_VERSION
-      - docker push $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME
+      - docker tag xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME $CLIENT_AWS_ACCOUNT.dkr.ecr.$CLIENT_AWS_REGION.amazonaws.com/xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME:$IMAGE_VERSION
+      - docker push $CLIENT_AWS_ACCOUNT.dkr.ecr.$CLIENT_AWS_REGION.amazonaws.com/xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME
       - |
         cat <<EOF >./image.yaml
         wordpress:
           image:
-            repository: $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME
+            repository: $CLIENT_AWS_ACCOUNT.dkr.ecr.$CLIENT_AWS_REGION.amazonaws.com/xilution/$XILUTION_ORGANIZATION_ID/$IMAGE_NAME
             tag: $IMAGE_VERSION
         EOF
 artifacts:
