--- a/buildspecs/deploy/buildspec.yaml
+++ b/buildspecs/deploy/buildspec.yaml
@@ -5,6 +5,10 @@ phases:
       docker: 18
   pre_build:
     commands:
+      - aws sts assume-role --role-arn arn:aws:iam::$CLIENT_AWS_ACCOUNT:role/xilution-developer-role --role-session-name xilution-beta > aws-creds.json
+      - export AWS_ACCESS_KEY_ID=`cat aws-creds.json | jq -r '.Credentials.AccessKeyId'`
+      - export AWS_SECRET_ACCESS_KEY=`cat aws-creds.json | jq -r '.Credentials.SecretAccessKey'`
+      - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
       - aws eks update-kubeconfig --name $K8S_CLUSTER_NAME
   build:
     commands:
