--- a/buildspecs/infrastructure/buildspec.yaml
+++ b/buildspecs/infrastructure/buildspec.yaml
@@ -5,9 +5,12 @@ phases:
       docker: 18
   pre_build:
     commands:
+      - aws sts assume-role --role-arn arn:aws:iam::$CLIENT_AWS_ACCOUNT:role/xilution-developer-role --role-session-name xilution-beta > aws-creds.json
+      - export AWS_ACCESS_KEY_ID=`cat aws-creds.json | jq -r '.Credentials.AccessKeyId'`
+      - export AWS_SECRET_ACCESS_KEY=`cat aws-creds.json | jq -r '.Credentials.SecretAccessKey'`
+      - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
       - |
         terraform init \
-          -backend-config="role_arn=arn:aws:iam::$CLIENT_AWS_ACCOUNT:role/xilution-developer-role" \
           -backend-config="key=xilution-cms-penguin/$XILUTION_PENGUIN_INSTANCE_ID/terraform.tfstate" \
           -backend-config="bucket=xilution-terraform-backend-state-bucket-$CLIENT_AWS_ACCOUNT" \
           -backend-config="dynamodb_table=xilution-terraform-backend-lock-table"
