--- a/buildspecs/deploy/buildspec.yaml
+++ b/buildspecs/deploy/buildspec.yaml
@@ -10,6 +10,7 @@ phases:
       - export AWS_SECRET_ACCESS_KEY=`cat aws-creds.json | jq -r '.Credentials.SecretAccessKey'`
       - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
       - aws eks update-kubeconfig --name $K8S_CLUSTER_NAME
+      - env
   build:
     commands:
       - |
@@ -27,18 +28,19 @@ phases:
   post_build:
     commands:
       - export LOAD_BALANCER_HOSTNAME=`kubectl get services/wordpress-$XILUTION_PENGUIN_INSTANCE_ID -n wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
-      - |
-        cat <<EOF >./item.json
-        {
-          "instance-id": {
-            "S": "$XILUTION_PENGUIN_INSTANCE_ID"
-          },
-          "organization-id": {
-            "S": "$XILUTION_ORGANIZATION_ID"
-          },
-          "load-balancer-url": {
-            "S": "http://$LOAD_BALANCER_HOSTNAME"
-          }
-        }
-        EOF
-      - aws dynamodb put-item --table-name xilution-cms-penguin-reverse-proxy-load-balancer-reference --item file://item.json
+      - echo $LOAD_BALANCER_HOSTNAME
+#      - |
+#        cat <<EOF >./item.json
+#        {
+#          "instance-id": {
+#            "S": "$XILUTION_PENGUIN_INSTANCE_ID"
+#          },
+#          "organization-id": {
+#            "S": "$XILUTION_ORGANIZATION_ID"
+#          },
+#          "load-balancer-url": {
+#            "S": "http://$LOAD_BALANCER_HOSTNAME"
+#          }
+#        }
+#        EOF
+#      - aws dynamodb put-item --table-name xilution-cms-penguin-reverse-proxy-load-balancer-reference --item file://item.json
