chore: moved docker registery creds in

--- a/buildspecs/infrastructure/buildspec.yaml
+++ b/buildspecs/infrastructure/buildspec.yaml
@@ -1,4 +1,13 @@
 version: 0.2
+
+env:
+  variables:
+    MASTER_USERNAME: wordpress
+    MASTER_PASSWORD: d29yZHByZXNz
+  secrets-manager:
+    DOCKER_USERNAME: xilution-docker-hub-credentials:username
+    DOCKER_PASSWORD: xilution-docker-hub-credentials:password
+
 phases:
   install:
     runtime-versions:
@@ -23,4 +32,8 @@ phases:
         terraform apply \
           -var="organization_id=$XILUTION_ORGANIZATION_ID" \
           -var="client_aws_account=$CLIENT_AWS_ACCOUNT" \
+          -var="master_username=$MASTER_USERNAME" \
+          -var="master_password=$MASTER_PASSWORD" \
+          -var="docker_username=$DOCKER_USERNAME" \
+          -var="docker_password=$DOCKER_PASSWORD" \
           -auto-approve
