--- a/buildspecs/deploy/buildspec.yaml
+++ b/buildspecs/deploy/buildspec.yaml
@@ -20,22 +20,22 @@ phases:
           --install \
           --force \
           --namespace wordpress \
-          --set mysql.name=wordpress-$XILUTION_PENGUIN_INSTANCE_ID \
+          --set mysql.name=wordpress-$PIPELINE_ID \
           --values $CODEBUILD_SRC_DIR_BuildDeployImage/image.yaml \
-          wordpress-$XILUTION_PENGUIN_INSTANCE_ID ./helm/wordpress
+          wordpress-$PIPELINE_ID ./helm/wordpress
 # Failed on n+1 execution
 #      - |
-#        kubectl autoscale deployment wordpress-$XILUTION_PENGUIN_INSTANCE_ID \
+#        kubectl autoscale deployment wordpress-$PIPELINE_ID \
 #          --cpu-percent=50 --min=1 --max=10 -n wordpress
   post_build:
     commands:
       - sleep 30
-      - export LOAD_BALANCER_HOSTNAME=`kubectl get services/wordpress-$XILUTION_PENGUIN_INSTANCE_ID -n wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
+      - export LOAD_BALANCER_HOSTNAME=`kubectl get services/wordpress-$PIPELINE_ID -n wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
       - |
         cat <<EOF >./item.json
         {
-          "instance-id": {
-            "S": "$XILUTION_PENGUIN_INSTANCE_ID"
+          "pipeline-id": {
+            "S": "$PIPELINE_ID"
           },
           "organization-id": {
             "S": "$XILUTION_ORGANIZATION_ID"
