--- a/buildspecs/infrastructure/buildspec.yaml
+++ b/buildspecs/infrastructure/buildspec.yaml
@@ -23,7 +23,7 @@ phases:
       - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
       - |
         terraform init \
-          -backend-config="key=xilution-cms-penguin/$XILUTION_PENGUIN_INSTANCE_ID/terraform.tfstate" \
+          -backend-config="key=xilution-cms-penguin/$PIPELINE_ID/terraform.tfstate" \
           -backend-config="bucket=xilution-terraform-backend-state-bucket-$CLIENT_AWS_ACCOUNT" \
           -backend-config="dynamodb_table=xilution-terraform-backend-lock-table"
   build:
