--- a/buildspecs/infrastructure/buildspec.yaml
+++ b/buildspecs/infrastructure/buildspec.yaml
@@ -31,6 +31,7 @@ phases:
       - |
         terraform apply \
           -var="organization_id=$XILUTION_ORGANIZATION_ID" \
+          -var="pipeline_id=$PIPELINE_ID" \
           -var="client_aws_account=$CLIENT_AWS_ACCOUNT" \
           -var="master_username=$MASTER_USERNAME" \
           -var="master_password=$MASTER_PASSWORD" \
