--- a/helm/wordpress/Chart.yaml
+++ b/helm/wordpress/Chart.yaml
@@ -3,4 +3,4 @@ appVersion: "1.0"
 description: Xilution Wordpress
 name: wordpress
 version: 1.0.0
-icon: https://xilution.com/images/xilution-logo.png
+icon: https://prod.xilution.com/images/cms-penguin.png
