--- a/buildspecs/deploy/buildspec.yaml
+++ b/buildspecs/deploy/buildspec.yaml
@@ -16,12 +16,15 @@ phases:
       - aws eks update-kubeconfig --name $K8S_CLUSTER_NAME
   build:
     commands:
+      - export LOAD_BALANCER_HOSTNAME=`kubectl get services/ingress-nginx -n nginx-ingress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
+      - echo $LOAD_BALANCER_HOSTNAME
       - |
         helm tiller run tiller -- helm upgrade \
           --install \
           --force \
           --namespace wordpress \
           --set mysql.name=wordpress-$PIPELINE_ID-$STAGE_NAME \
+          --set host=$LOAD_BALANCER_HOSTNAME \
           --set path=/wordpress/$PIPELINE_ID/$STAGE_NAME \
           --values $CODEBUILD_SRC_DIR_BuildDeployImage/image.yaml \
           wordpress-$PIPELINE_ID-$STAGE_NAME ./helm/wordpress
