--- a/helm/wordpress/templates/deployment.yaml
+++ b/helm/wordpress/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
                   key: password
             - name: WORDPRESS_CONFIG_EXTRA
               value: |
-                define( 'WP_SITEURL', '{{ .Values.protocol }}://{{ .Values.host }}' );
+                define( 'WP_SITEURL', '{{ .Values.protocol }}://{{ .Values.host }}{{ .Values.path }}' );
                 define( 'WP_HOME', '{{ .Values.protocol }}://{{ .Values.host }}{{ .Values.path }}' );
           ports:
             - containerPort: 80
