--- a/buildspecs/deploy/buildspec.yaml
+++ b/buildspecs/deploy/buildspec.yaml
@@ -19,24 +19,24 @@ phases:
           --install \
           --force \
           --namespace wordpress \
-          --set mysql.name=wordpress-$PIPELINE_ID-$STAGE_NAME \
+          --set mysql.name=wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME \
           --set host=$LOAD_BALANCER_HOSTNAME \
-          --set path=/wordpress/$PIPELINE_ID/$STAGE_NAME \
+          --set path=/wordpress/$PENGUIN_PIPELINE_ID/$STAGE_NAME \
           --values $CODEBUILD_SRC_DIR_BuildDeployImage/image.yaml \
-          wordpress-$PIPELINE_ID-$STAGE_NAME ./helm/wordpress
+          wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME ./helm/wordpress
 # Failed on n+1 execution
 #      - |
-#        kubectl autoscale deployment wordpress-$PIPELINE_ID-$STAGE_NAME \
+#        kubectl autoscale deployment wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME \
 #          --cpu-percent=50 --min=1 --max=10 -n wordpress
 #  post_build:
 #    commands:
 #      - sleep 30
-#      - export LOAD_BALANCER_HOSTNAME=`kubectl get services/wordpress-$PIPELINE_ID-$STAGE_NAME -n wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
+#      - export LOAD_BALANCER_HOSTNAME=`kubectl get services/wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME -n wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
 #      - |
 #        cat <<EOF >./item.json
 #        {
 #          "pipeline-id": {
-#            "S": "$PIPELINE_ID"
+#            "S": "$PENGUIN_PIPELINE_ID"
 #          },
 #          "stage-name": {
 #            "S": "$STAGE_NAME"
