--- a/buildspecs/infrastructure/buildspec.yaml
+++ b/buildspecs/infrastructure/buildspec.yaml
@@ -17,7 +17,7 @@ phases:
       - export AWS_SESSION_TOKEN=`cat aws-creds.json | jq -r '.Credentials.SessionToken'`
       - |
         terraform init \
-          -backend-config="key=xilution-cms-penguin/$PIPELINE_ID/terraform.tfstate" \
+          -backend-config="key=xilution-cms-penguin/$PENGUIN_PIPELINE_ID/terraform.tfstate" \
           -backend-config="bucket=xilution-terraform-backend-state-bucket-$CLIENT_AWS_ACCOUNT" \
           -backend-config="dynamodb_table=xilution-terraform-backend-lock-table"
   build:
@@ -25,7 +25,7 @@ phases:
       - |
         terraform apply \
           -var="organization_id=$XILUTION_ORGANIZATION_ID" \
-          -var="pipeline_id=$PIPELINE_ID" \
+          -var="penguin_pipeline_id=$PENGUIN_PIPELINE_ID" \
           -var="giraffe_pipeline_id=$GIRAFFE_PIPELINE_ID" \
           -var="client_aws_account=$CLIENT_AWS_ACCOUNT" \
           -var="k8s_cluster_name=$K8S_CLUSTER_NAME" \
