--- a/helm/wordpress/templates/ingress.yaml
+++ b/helm/wordpress/templates/ingress.yaml
@@ -9,6 +9,6 @@ spec:
     - http:
         paths:
           - backend:
-              serviceName: "{{ .Release.Name }}"
+              serviceName: "{{ .Release.Name }}-site"
               servicePort: 80
             path: "{{ .Values.path }}"
