--- a/helm/wordpress/templates/wordpress-deployment.yaml
+++ b/helm/wordpress/templates/wordpress-deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: WORDPRESS_DB_NAME
               value: "{{ .Values.mysql.name }}"
             - name: WORDPRESS_DB_USER
-              value: wordpress
+              value: root
             - name: WORDPRESS_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
