chore: put it all back

--- a/helm/wordpress/templates/wordpress-deployment.yaml
+++ b/helm/wordpress/templates/wordpress-deployment.yaml
@@ -30,6 +30,10 @@ spec:
                 secretKeyRef:
                   name: mysql-pass
                   key: password
+            - name: WORDPRESS_CONFIG_EXTRA
+              value: |
+                define( 'WP_SITEURL', '{{ .Values.protocol }}://{{ .Values.host }}{{ .Values.path }}' );
+                define( 'WP_HOME', '{{ .Values.protocol }}://{{ .Values.host }}{{ .Values.path }}' );
           ports:
             - containerPort: 80
               name: site
