--- a/helm/wordpress/templates/wordpress-deployment.yaml
+++ b/helm/wordpress/templates/wordpress-deployment.yaml
@@ -34,7 +34,7 @@ spec:
               value: |
                 define( 'WP_SITEURL', '{{ .Values.protocol }}://{{ .Values.host }}{{ .Values.path }}' );
                 define( 'WP_HOME', '{{ .Values.protocol }}://{{ .Values.host }}{{ .Values.path }}' );
-                $_SERVER['REQUEST_URI'] = {{ .Values.path }} . $_SERVER['REQUEST_URI']
+                $_SERVER['REQUEST_URI'] = {{ .Values.path }} . $_SERVER['REQUEST_URI'];
           ports:
             - containerPort: 80
               name: site
