--- a/buildspecs/deploy/buildspec.yaml
+++ b/buildspecs/deploy/buildspec.yaml
@@ -23,7 +23,7 @@ phases:
           --set host=$LOAD_BALANCER_HOSTNAME \
           --set path=/wordpress/$PENGUIN_PIPELINE_ID/$STAGE_NAME \
           --values $CODEBUILD_SRC_DIR_BuildDeployImage/image.yaml \
-          wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME ./helm/wordpress
+          wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME $CODEBUILD_SRC_DIR_ImageDeploySourceCode/helm/wordpress
 # Failed on n+1 execution
 #      - |
 #        kubectl autoscale deployment wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME \
@@ -33,7 +33,7 @@ phases:
 #      - sleep 30
 #      - export LOAD_BALANCER_HOSTNAME=`kubectl get services/wordpress-$PENGUIN_PIPELINE_ID-$STAGE_NAME -n wordpress -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
 #      - |
-#        cat <<EOF >./item.json
+#        cat <<EOF >$CODEBUILD_SRC_DIR_ImageDeploySourceCode/item.json
 #        {
 #          "pipeline-id": {
 #            "S": "$PENGUIN_PIPELINE_ID"
