--- a/buildspecs/infrastructure/buildspec.yaml
+++ b/buildspecs/infrastructure/buildspec.yaml
@@ -22,7 +22,8 @@ phases:
         terraform init \
           -backend-config="key=xilution-cms-penguin/$PENGUIN_PIPELINE_ID/terraform.tfstate" \
           -backend-config="bucket=xilution-terraform-backend-state-bucket-$CLIENT_AWS_ACCOUNT" \
-          -backend-config="dynamodb_table=xilution-terraform-backend-lock-table"
+          -backend-config="dynamodb_table=xilution-terraform-backend-lock-table" \
+          $CODEBUILD_SRC_DIR_ImageDeploySourceCode
   build:
     commands:
       - |
@@ -36,4 +37,5 @@ phases:
           -var="master_password=$MASTER_PASSWORD" \
           -var="docker_username=$DOCKER_USERNAME" \
           -var="docker_password=$DOCKER_PASSWORD" \
-          -auto-approve
+          -auto-approve \
+          $CODEBUILD_SRC_DIR_ImageDeploySourceCode
