--- a/buildspecs/e2e/buildspec.yaml
+++ b/buildspecs/e2e/buildspec.yaml
@@ -17,11 +17,12 @@ phases:
       - while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' $WORDPRESS_SITE_BASE_URL)" != "200" ]]; do sleep 5; done
   build:
     commands:
-      - cat $CODEBUILD_SRC_DIR_SourceCode/xilution.yaml
-      - export COMMANDS=$(yq read $CODEBUILD_SRC_DIR_SourceCode/xilution.yaml -j | jq -r '.tests.e2e.commands[] | @base64')
+      - cd $CODEBUILD_SRC_DIR_SourceCode
+      - cat ./xilution.yaml
+      - export COMMANDS=$(yq read ./xilution.yaml -j | jq -r '.tests.e2e.commands[] | @base64')
       - export NOT_FOUND_MESSAGE='No end to end test commands found.'
       - if [[ $(echo $COMMANDS | awk '{print NF}') > 0 ]]; then for COMMAND in $COMMANDS; do echo $COMMAND | base64 --decode | bash; done; else echo $NOT_FOUND_MESSAGE; fi
 
 artifacts:
   files:
-    - output/e2e/**/*
+    - $CODEBUILD_SRC_DIR_SourceCode/output/e2e/**/*
