--- a/buildspecs/load/buildspec.yaml
+++ b/buildspecs/load/buildspec.yaml
@@ -13,13 +13,16 @@ phases:
       - aws eks update-kubeconfig --name $K8S_CLUSTER_NAME
       - export LOAD_BALANCER_HOSTNAME=`kubectl get services/ingress-nginx -n ingress-nginx -o json | jq -r '.status.loadBalancer.ingress[0].hostname'`
       - export WORDPRESS_SITE_BASE_URL=http://$LOAD_BALANCER_HOSTNAME/wordpress/$PENGUIN_PIPELINE_ID/$STAGE_NAME
+      - echo $WORDPRESS_SITE_BASE_URL
       - while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' $WORDPRESS_SITE_BASE_URL)" != "200" ]]; do sleep 5; done
   build:
     commands:
+      - cd $CODEBUILD_SRC_DIR_SourceCode
+      - cat ./xilution.yaml
       - export COMMANDS=$(yq read xilution.yaml -j | jq -r '.tests.load.commands[] | @base64')
       - export NOT_FOUND_MESSAGE='No load test commands found.'
       - if [[ $(echo $COMMANDS | awk '{print NF}') > 0 ]]; then for COMMAND in $COMMANDS; do echo $COMMAND | base64 --decode | bash; done; else echo $NOT_FOUND_MESSAGE; fi
 
 artifacts:
   files:
-    - output/load/**/*
+    - $CODEBUILD_SRC_DIR_SourceCode/output/load/**/*
